# Thedush_welding_robot

./: README.md
thedush_arm_full_robot/: CMakeLists.txt  package.xml  package.xml~  read.txt  urdf.rviz
thedush_arm_full_robot/config/: joint_names_full_robot.yaml  thedush_arm_gazebo_control.yaml  thedush_arm_gazebo_joint_states.yaml  trajectory_control.yaml
thedush_arm_full_robot/launch/: thedush_arm_bringup_moveit.launch  thedush_arm_gazebo_control.launch  thedush_arm_gazebo_states.launch  thedush_arm_trajectory_controller.launch  thedush_arm_world.launch  view_demo.launch
thedush_arm_full_robot/meshes/: arm_link.STL  base_link.STL  meshes.bat  shoulder_link.STL  tool_link.STL  wrist_link.STL  wrotate_link.STL
thedush_arm_full_robot/urdf/: full_robot.urdf  full_robot.urdf~  thedush_arm_full_robot.gv
thedush_arm_test/: CMakeLists.txt  CMakeLists.txt~  package.xml
thedush_arm_test/launch/: robot_model_and_robot_state_tutorial.launch
thedush_arm_test/script/: execution.py  move_group_python_interface_tutorial.py  plan.py  plan_with_constraints.py
thedush_arm_test/src/: robot_model_and_robot_state_tutorial.cpp
welding_robot_config/: CMakeLists.txt  package.xml  read.me
welding_robot_config/config/: controllers.yaml  fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml  thedush_arm_full_robot.srdf
welding_robot_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_planning_execution.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  thedush_arm_full_robot_moveit_controller_manager.launch.xml  trajectory_execution.launch.xml  warehouse.launch
